--- a/Changelog.txt
+++ b/Changelog.txt
@@ -68,10 +68,11 @@ v1.10.5
  Localization:
   - Fixed an error with Saddams Rage localization not appearing
   - Redid political party names & descriptions for: PER, SAU, TUR, IRQ
-  - Add and Replace tooltips of Chinese focuses for more readable
+  - Add and Replace tooltips of Chinese focuses for more readability
+  - Fixed the localization for the "TAG" integrates TAG now properly
 
  Modding Resources:
-  - Added more detailed unit modifiers for main infantry batallions as well as org modifier for existing sub-unit modifiers
+  - Added more detailed unit modifiers for main infantry battalions as well as org modifier for existing sub-unit modifiers
 
  User Interface:
   - Added an "Unemployment Rate" map mode
