--- a/localisation/english/events_l_english.yml
+++ b/localisation/english/events_l_english.yml
@@ -2101,8 +2101,8 @@
  overlord.1.a: "Wonderful"
  overlord.1.a_tt: "We gain §YCores§! on §B[FROM.GetName]§!\n"
 
- overlord_news.1.t: "[ROOT.GetName] Integrates [FROM.GetName]"
- overlord_news.1.d: "Delegations from [ROOT.GetName] and [FROM.GetName] have announced today that [FROM.GetName] will be integrated into [ROOT.GetName]. [FROM.GetName] has been an autonomous state for quite some time and has become increasingly reliant on [ROOT.GetName] in the past months. It is quoted as 'It only makes sense!' from the two parties involved.\n\nThe truth in that statement is yet to be seen.."
+ overlord_news.1.t: "[ROOT.GetName] Integrates [FROM.FROM.GetName]"
+ overlord_news.1.d: "Delegations from [ROOT.GetName] and [FROM.FROM.GetName] have announced today that [FROM.FROM.GetName] will be integrated into [ROOT.GetName]. [FROM.FROM.GetName] has been an autonomous state for quite some time and has become increasingly reliant on [ROOT.GetName] in the past months. It is quoted as 'It only makes sense!' from the two parties involved.\n\nThe truth in that statement is yet to be seen.."
  overlord_news.1.a: "Interesting"
 
  AIDS_events.1.t: "HIV Prevalence Increases"
