--- a/Changelog.txt
+++ b/Changelog.txt
@@ -43,6 +43,7 @@ v1.10.5
   - Fixed an issue with a national spirit not being removed for Indonesia
   - Fixed Jack Layton being in the wrong party for Canada
   - Fixed the broken display in the leasing section stopping working at 20 leased buildings
+  - Fixed a bug with liberating lands which would reset your tech and focus tree if you were given back your cores
 
  Graphics:
   - Reworked most of the decision menu pictures
