--- a/localisation/english/MD_focus_BLR_l_english.yml
+++ b/localisation/english/MD_focus_BLR_l_english.yml
@@ -1204,7 +1204,7 @@
  BLR_create_union_state: "[SOV.GetFlag]§YFinal Stage§! of Integration"
  BLR_create_union_state_desc: "Now we have finally become a Union State, such as it was conceived as a result of repeated renegotiation of agreements"
  SOV_reunite_with_belarus: "[BLR.GetFlag]§YReunite§! with §Y[BLR.GetName]§!"
- SOV_reunite_with_belarus_desc: "Belarus is our brother nation. We have taken multiple steps to integrat with each other, now it's time for the final stroke."
+ SOV_reunite_with_belarus_desc: "Belarus is our brother nation. We have taken multiple steps to integrate with each other, now it's time for the final stroke."
  SOV_sozdat_union_state: "[BLR.GetFlag]§YCreate§! a Union State By §RForce§!"
  SOV_pro_union_state_revout: "[BLR.GetFlag]§YPro-Union§! Coup"
  BLR_added_tatarstan: "§YConclude§! a Cooperation Agreement With §Y[TAT.GetFlag]Tatarstan§!"
@@ -1257,7 +1257,7 @@
  SER_added_bashkortostan: "§YConclude§! a Cooperation Agreement With §Y[BSH.GetFlag]Bashkortostan§!"
  SER_added_bashkortostan_desc: "Bashkortostan's industry is one of the largest and most productive on the territory of Russia, we will conclude an agreement with the Republic of Bashkortostan to receive part of this industrial potential"
  SOV_reunite_with_serbia: "[SER.GetFlag]§YReunite§! with §Y[SER.GetNameWithFlag]§!"
- SOV_reunite_with_serbia_desc: "Serbia is our brother nation. We have taken multiple steps to integrat with each other, now it's time for the final stroke."
+ SOV_reunite_with_serbia_desc: "Serbia is our brother nation. We have taken multiple steps to integrate with each other, now it's time for the final stroke."
  SER_create_union_state: "[SOV.GetFlag]§YFinal Stage§! of Integration"
  SER_create_union_state_desc: "Now we have finally become a Union State, such as it was conceived as a result of repeated renegotiation of agreements"
  SOV_sozdat_union_states: "[SER.GetFlag]§YCreate§! a Union State By §RForce§!"
