MLW FoPol Work But More
i eated dinner and now i'm eepy

--- a/localisation/english/MD_focus_MLW_l_english.yml
+++ b/localisation/english/MD_focus_MLW_l_english.yml
@@ -1,4 +1,8 @@
 ﻿l_english:
+ # move this later
+ if_they_accept_tooltip_TT: "Effect if §Y[?var:accept_tag.GetNameWithFlag]§! accept:"
+
+
 
  # IDEAS
  AGRI_SADC_idea: "SADC Agricultural Market"
@@ -213,6 +217,40 @@
  MLW_FOPOL_GCC.1.O2: "Hopefully we can hire them soon."
  MLW_FOPOL_GCC.1.O3: "We'll hire a team or two soon!"
 
+ MLW_FOPOL_GCC.2.t: "Malawi Offers a Trade Deal"
+ MLW_FOPOL_GCC.2.d: "" # fix
+ MLW_FOPOL_GCC.2.Y1: "A deal must be made."
+ MLW_FOPOL_GCC.2.N1: "What deal can even be made?"
+
+ MLW_FOPOL_GCC.20.t: "[PREV.GetName] Signs a Trade Deal"
+ MLW_FOPOL_GCC.20.d: "" # fix
+ MLW_FOPOL_GCC.20.O1: "Let's get to work."
+
+ MLW_FOPOL_GCC.21.t: "[PREV.GetName] Rejects Our Deal"
+ MLW_FOPOL_GCC.21.d: "" # fix
+ MLW_FOPOL_GCC.21.O1: "A shame, but there is plenty of time."
+
+ MLW_FOPOL_GCC.3.t: "Malawi Nationalises Construction Conglomerate"
+ MLW_FOPOL_GCC.3.d: "" # fix
+ MLW_FOPOL_GCC.3.O1: "Integration will benefit the state!"
+ MLW_FOPOL_GCC.3.O2: "A move towards a sovereign wealth fund?"
+
+ MLW_FOPOL_GCC.4.t: "Mining Rights Auctions Start"
+ MLW_FOPOL_GCC.4.d: "" # fix
+ MLW_FOPOL_GCC.4.Y1: "We'll sign on, just to see."
+ MLW_FOPOL_GCC.4.N1: "Do they even have anything worth buying?"
+
+ MLW_FOPOL_GCC.40.t: "[PREV.GetName] Signs on to Bidders List"
+ MLW_FOPOL_GCC.40.d: "" # fix
+ MLW_FOPOL_GCC.40.O1: "More seats filled, great!"
+
+ MLW_FOPOL_GCC.41.t: "[PREV.GetName] Snubs Our Invitation"
+ MLW_FOPOL_GCC.41.d: "" # fix
+ MLW_FOPOL_GCC.41.O1: "There's always future auctions."
+
+ MLW_FOPOL_GCC.400.t: "[PREV.GetName] Wins Auction for Land Rights"
+ MLW_FOPOL_GCC.400.d: "" # fix
+ MLW_FOPOL_GCC.400.O1: "We look forwards to working together."
 
  # DECISIONS
  # GCC FOPOL
@@ -224,7 +262,9 @@
  MLW_GCC_land_rights_TT: "Lease is Currently §GVacant§!"
  MLW_FOPOL_GCC_CAT_window_LEASEHOLDER_COUNTRY_TEXT: "[MLW_GCC_land_rights_checker]"
  MLW_FOPOL_GCC_CAT_window_BIDDERS_TITLE_TEXT: "Current Bidders for §YLand Rights§!:"
+ MLW_FOPOL_GCC_CAT_window_BIDDERS_LOCKED_TITLE_TEXT: "To unlock the §YLand Rights Auction§! you must first complete the §Y$MLW_gcc_mining_rights$§! focus."
  MLW_FOPOL_GCC_CAT_window_MSCC_TITLE_TEXT: "Current §YMSCC-Gulf§! Clients:"
+ MLW_FOPOL_GCC_CAT_window_MSCC_LOCKED_TITLE_TEXT: "To unlock the §YMSCC Clients List§! you must first complete the §Y$MLW_gcc_megaprojects$§! focus."
 
  # SADC FOPOL
 
@@ -547,11 +587,11 @@
  MLW_gcc_deepen_relations: "Deepen Relations in the Gulf"
  MLW_gcc_deepen_relations_desc: ""
 
- # MLW_gcc_constructors: "MSCC Gulf Office"
- # MLW_gcc_constructors_desc: ""
+ MLW_gcc_constructors: "MSCC Gulf Office"
+ MLW_gcc_constructors_desc: ""
 
- # MLW_gcc_mining_rights: "Allow GCC Members Mining Permits"
- # MLW_gcc_mining_rights_desc: ""
+ MLW_gcc_mining_rights: "Allow GCC Members Mining Permits"
+ MLW_gcc_mining_rights_desc: ""
 
 
 
