Fixed Brunei missing stuff

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -61,6 +61,7 @@ v1.10.5
   - You can now request Major Non NATO Ally status if you have over 100 opinion with the United States
   - If you haven't set your nuclear status for Nuclear Energy when constructing Enrichment Facilities it will automatically set it and your production to LEU
   - SCO member states expansion and tweak, now China could let more countries to join SCO, which most of are African Countries. (Thanks the Suggestion from BlackSyX)
+  - Adjusted the conditionals for China's Strengthen ASEAN Ties so it does not consider nations if they do not exist or do not have the ASEAN idea
 
  Database:
   - ADJUSTED PRODUCTIVITY: MIC, KOS, KAR, KAC, SHN, WAA, ABK, JUB, CHE
