--- a/localisation/english/plane_designer_l_english.yml
+++ b/localisation/english/plane_designer_l_english.yml
@@ -699,7 +699,7 @@
  weap_as_hardpoint_4: "4th Generation Naval Hardpoint"
  weap_as_hardpoint_4_desc: "$weap_as_hardpoint_1_desc$"
  weap_ag_gunship_1: "25mm - 40mm Cannons"
- weap_ag_gunship_1_desc: "25mm Gattling Gun and 40mm Bofors cannons mounted in large aircraft allow for aerial gunships, providing precision fire support to ground units.\n\n§GDesigner Hint: Use this module to create large CAS aircraft. These aircraft can provide significant amounts of CAS support, but will be very vulnerable in any kind of contested airspace.§!\n\n§WUsing this as the primary weapon will create a§! §BCAS Aircraft§!"
+ weap_ag_gunship_1_desc: "25mm Gatling Gun and 40mm Bofors cannons mounted in large aircraft allow for aerial gunships, providing precision fire support to ground units.\n\n§GDesigner Hint: Use this module to create large CAS aircraft. These aircraft can provide significant amounts of CAS support, but will be very vulnerable in any kind of contested airspace.§!\n\n§WUsing this as the primary weapon will create a§! §BCAS Aircraft§!"
  weap_ag_gunship_2: "105mm Cannon"
  weap_ag_gunship_2_desc: "105mm Howitzer cannons allow gunships to provide artillery and tank levels of precise direct fire support to ground units.\n\n§GDesigner Hint: Use this module to create large CAS aircraft. These aircraft can provide significant amounts of CAS support, but will be very vulnerable in any kind of contested airspace.§!\n\n§WUsing this as the primary weapon will create a§! §BCAS Aircraft§!"
  weap_ag_rapid_dragon: "Palletized ALCMs"
