--- a/localisation/english/MD_tooltips_l_english.yml
+++ b/localisation/english/MD_tooltips_l_english.yml
@@ -404,8 +404,10 @@
  TAI_loses_cores_tt: "§Y[TAI.Getnamewithflag]§! loses cores on Chinese territory\n"
  TAI_loses_all_cores_tt: "§Y[TAI.Getnamewithflag]§! loses all exist cores\n"
  CHI_loses_cores_tt: "§Y[CHI.Getnamewithflag]§! loses cores on Taiwanese territory\n"
+ TAI_COM_ruling_tt: "Current ruling party is a member of the §RPan-Red Coalition§!"
+ TAI_KMT_ruling_tt: "Current ruling party is a member of the §CPan-Blue Coalition§!"
  TAI_DPP_ruling_tt: "Current ruling party is a member of the §GPan-Green Coalition§!"
- TAI_DPP_not_ruling_tt: "Current ruling party is a member of the §CPan-Blue Coalition§!"
+ TAI_DPP_not_ruling_tt: "Current ruling party is a member of the §CPan-Blue Coalition§! \nCurrent ruling party is a member of the §RPan-Red Coalition§!"
  TAI_DPP_75_tt: "§YTotal Support§! for the §GPan-Green Coalition§! is more than §Y75%§!"
  TAI_DPP_25_tt: "§YTotal Support§! for the §GPan-Green Coalition§! is less than §Y25%§!"
  accepted_roadmap: "§Y[TAI.Getnamewithflag]§! has §Gaccepted§! the \"Roadmap to Reunification\""
