--- a/localisation/braz_por/MD_Syrian_content_l_braz_por.yml
+++ b/localisation/braz_por/MD_Syrian_content_l_braz_por.yml
@@ -542,7 +542,7 @@
  SYR_arm_palestinians: "Armar o Hamas"
  SYR_arm_palestinians_desc: "O Hamas está em uma luta armada contra Israel. Eles são os verdadeiros mujahideen e precisamos garantir que eles possam continuar lutando."
  SYR_supply_taliban: "Fornecer Ajuda ao Talibã"
- SYR_supply_taliban_desc: "O Talibã conseguiu estabelecer um Estado Islâmico no Afeganistão, mas agora as potências ocidentais estão tentando derrubar seu governo legítimo. Precisamos garantir que eles não caiam."
+ SYR_supply_taliban_desc: "O Talibã consegue estabelecer um Estado Islâmico no Afeganistão, mas agora as potências ocidentais estão tentando derrubar seu governo legítimo. Precisamos garantir que eles não caiam"
  SYR_supply_al_shabaab: "Fornecer Ajuda ao Al-Shabaab"
  SYR_supply_al_shabaab_desc: "O Al-Shabaab é um movimento jihadista somaliano. Eles estão lutando contra o governo somaliano para estabelecer um estado governado pela Sharia, e eles precisam de nossa ajuda para fazê-lo."
  SYR_safehaven_for_islamists: "Refúgio para Islamistas"
