--- a/localisation/polish/MD_Syrian_content_l_polish.yml
+++ b/localisation/polish/MD_Syrian_content_l_polish.yml
@@ -542,7 +542,7 @@
  SYR_arm_palestinians: "Uzbroić Hamas"
  SYR_arm_palestinians_desc: "Hamas prowadzi walkę zbrojną przeciwko Izraelowi. To prawdziwi muhadżini i musimy zadbać o to, aby mogli dalej walczyć"
  SYR_supply_taliban: "Zaopatrz Talibów"
- SYR_supply_taliban_desc: "Talibom udało się ustanowić Państwo Islamskie w Afganistanie, ale teraz mocarstwa zachodnie próbują obalić ich legalne rządy. Musimy mieć pewność, że nie spadną"
+ SYR_supply_taliban_desc: "Talibowie zdołali ustanowić Państwo Islamskie w Afganistanie, ale teraz mocarstwa zachodnie próbują obalić ich prawowite rządy. Musimy się upewnić, że nie upadną"
  SYR_supply_al_shabaab: "Zaopatrz Al-Shabaab"
  SYR_supply_al_shabaab_desc: "Al-Shabaab to somalijski ruch dżihadystyczny. Obecnie walczą z rządem Somalii o ustanowienie rządów państwa zgodnie z prawem szariatu i potrzebują do tego naszej pomocy"
  SYR_safehaven_for_islamists: "Sejf dla islamistów"
