--- a/localisation/polish/MD_subideology_parties_l_polish.yml
+++ b/localisation/polish/MD_subideology_parties_l_polish.yml
@@ -7139,7 +7139,7 @@
  SEL.Neutral_Autocracy_1: "£SEL_neutral_autocracy Séléka"
  SEL.Neutral_Autocracy_1_icon: "£SEL_neutral_autocracy"
  SEL.Neutral_Autocracy_1_desc: "Séléka to sojusz rebeliantów w Republice Środkowoafrykańskiej. Grupa czerpie swoją siłę przede wszystkim z muzułmańskiej ludności kraju i została utworzona z „fundamentalnej” odłamowej grupy Konwencji Patriotów na rzecz Sprawiedliwości i Pokoju (CPJP) i Konwencji Patriotycznej dla Ocalenia Kraju (CPSK). Następnie obejmowałaby wiele innych grup rebeliantów, a najbardziej godnym uwagi dodatkiem była Unia Sił Demokratycznych na rzecz Jedności (UFDR) pod przewodnictwem Michela Djotodii, który został przywódcą grupy podczas wojny domowej w Republice Środkowoafrykańskiej."
- SEL.Neutral_Autocracy_2: "£SEL_neutral_autocracy ex-Séléka"
+ SEL.Neutral_Autocracy_2: "£SEL_neutral_autocracy była Séléka"
  SEL.Neutral_Autocracy_2_icon: "£SEL_neutral_autocracy"
  SEL.Neutral_Autocracy_2_desc: "była koalicja Séléka jest następcą koalicji Séléka. Obejmuje grupę kilku odłamowych grup, które otwarcie walczyły z Anti Balaką, szeregiem chrześcijańskich milicji i rządem, który nie zgodził się na rozwiązanie Séléki przez prezydenta Michela Djotodię."
  SEN.Western_Autocracy: "£SEN_western_autocracy Konwencja des Démocrates et des Patriotes"
