--- a/localisation/polish/victory_points_l_polish.yml
+++ b/localisation/polish/victory_points_l_polish.yml
@@ -4554,19 +4554,19 @@
  VICTORY_POINTS_14965: "Fort Thompson"
  VICTORY_POINTS_14974: "Onida"
  VICTORY_POINTS_14976: "Wzgórze Orła"
- VICTORY_POINTS_14970: "Philip"
- VICTORY_POINTS_7771: "White River"
+ VICTORY_POINTS_14970: "Filip"
+ VICTORY_POINTS_7771: "Biała Rzeka"
  VICTORY_POINTS_14982: "Bismarck"
  VICTORY_POINTS_14987: "Fargo"
  VICTORY_POINTS_14988: "Dickinson"
  VICTORY_POINTS_14983: "Jamestown"
- VICTORY_POINTS_1870: "Cavalier"
+ VICTORY_POINTS_1870: "Kawaler"
  VICTORY_POINTS_12685: "Dunseith"
- VICTORY_POINTS_14996: "Devil's Lake"
+ VICTORY_POINTS_14996: "Jezioro Diabła"
  VICTORY_POINTS_14994: "McGregor"
  VICTORY_POINTS_4759: "Crosby"
- VICTORY_POINTS_14986: "Tappen"
- VICTORY_POINTS_14985: "New Salem"
+ VICTORY_POINTS_14986: "Stukać"
+ VICTORY_POINTS_14985: "Nowy Salem"
  VICTORY_POINTS_15267: "Helena"
  VICTORY_POINTS_15279: "Winnett"
  VICTORY_POINTS_15263: "Butte"
