--- a/localisation/russian/MD_Syrian_content_l_russian.yml
+++ b/localisation/russian/MD_Syrian_content_l_russian.yml
@@ -542,7 +542,7 @@
  SYR_arm_palestinians: "Вооружить ХАМАС"
  SYR_arm_palestinians_desc: "ХАМАС снова ввязался в вооруженную борьбу с Израилем. Они - истинные мухаджиды, и мы должны обеспечить, чтобы они могли продолжать борьбу."
  SYR_supply_taliban: "Снабжение Талибана"
- SYR_supply_taliban_desc: "Талибам удалось создать исламское государство в Афганистане, но сейчас западные державы пытаются свергнуть свое законное правление. Мы должны обеспечить, чтобы они не пали."
+ SYR_supply_taliban_desc: "Талибы сумели создать Исламское государство в Афганистане, но теперь западные державы пытаются свергнуть их законное правление. Нам нужно гарантировать, что они не падут"
  SYR_supply_al_shabaab: "Снабжение Аш-Шабааб"
  SYR_supply_al_shabaab_desc: "Аш-Шабааб - это сомалийское джихадистское движение. В настоящее время они ведут борьбу с сомалийским правительством за установление государственного правления по законам шариата, и для этого им нужна наша помощь."
  SYR_safehaven_for_islamists: "Пристанище для исламистов"
