--- a/localisation/simp_chinese/MD_Syrian_content_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_Syrian_content_l_simp_chinese.yml
@@ -522,7 +522,7 @@
  SYR_closer_ties_to_france: "与法国的关系更密切"
  SYR_closer_ties_to_france_desc: "法国曾经是我们的殖民宗主国，也是欧洲最强大的国家之一。许多前法国殖民地都与法国保持着联系，我们也应该这样做"
  SYR_condemn_taliban: "谴责塔利班"
- SYR_condemn_taliban_desc: "塔利班代表着一种令人厌恶的伊斯兰教形式。我们应该支持阿富汗合法政府打击这些恐怖分子"
+ SYR_condemn_taliban_desc: "塔利班代表着一种令人厌恶的伊斯兰教形式。我们应该支持阿富汗合法政府打击这些恐怖分子。"
  SYR_air_practice_with_britain: "与英国进行空军演习"
  SYR_air_practice_with_britain_desc: "英国人在塞浦路斯有一个空军基地。这使他们成为了我们训练空军的不二之选"
  SYR_french_investments: "吸引法国投资"
@@ -540,7 +540,7 @@
  SYR_arm_palestinians: "援助哈马斯"
  SYR_arm_palestinians_desc: "哈马斯正在与以色列进行武装斗争。他们是真正的圣战组织，我们需要确保他们能够一直战斗"
  SYR_supply_taliban: "支持塔利班"
- SYR_supply_taliban_desc: "塔利班艰难的在阿富汗建立了一个伊斯兰国，但现在西方列强正试图推翻他们的合法统治。我们需要确保他们的政权不会倒台"
+ SYR_supply_taliban_desc: "塔利班在阿富汗建立了伊斯兰国，但现在西方列强正试图推翻他们的合法统治。我们需要确保他们不会倒台。"
  SYR_supply_al_shabaab: "支持青年党"
  SYR_supply_al_shabaab_desc: "青年党是索马里的一个圣战运动组织。他们目前正在与索马里政府作战，目的是建立一个以伊斯兰教法为法律的国家，但他们需要我们的帮助才能达到目标"
  SYR_safehaven_for_islamists: "为圣战人士提供庇护"
