--- a/localisation/simp_chinese/MD_focus_CES_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_CES_l_simp_chinese.yml
@@ -989,7 +989,7 @@
  gdp_kyr_80_tt: "GDP ($$[?gdp_total|Y] b) > GDP ($§Y79§! b)"
  imamat_turkestan: "伊玛目突厥斯坦"
  jihad.2.t: "与塔利班重新团结的方法"
- jihad.2.d: "由于塔利班在政治和宗教上与我们非常接近，我们需要决定如何最终使我们的国家重新统一。也许如果他们的政府不想和平统一，我们可以使用我们的方法，但我们可能不会走外交路线，向全世界展示谁是真正的地区参与者。"
+ jihad.2.d: "由于塔利班在政治和宗教上与我们关系密切，我们需要决定如何最终实现国家统一。如果他们的政府不想和平统一，我们也许可以采取我们的方法，但我们可能不会走外交路线，向全世界展示谁才是真正的地区参与者。"
  jihad.2.a: "我认为在我们浪费人力和装备之前我们需要看看他们如何反应。"
  jihad.2.b: "外交？哈！外交不过是阴险世俗的影子！"
  jihad.3.t: "一项关于我们国家重新统一的提案"
