--- a/localisation/russian/MD_tooltips_l_russian.yml
+++ b/localisation/russian/MD_tooltips_l_russian.yml
@@ -347,7 +347,7 @@
  TAI_loses_all_cores_tt: "Все территории больше не будут национальными для §Y[TAI.GetNameWithflag]§!\n"
  CHI_loses_cores_tt: "Тайваньские территории больше не будут национальными для §Y[CHI.GetNameWithflag]§!\n"
  TAI_DPP_ruling_tt: "Текущая правящая партия - член §GПан-зеленой коалиции§!"
- TAI_DPP_not_ruling_tt: "Текущая правящая партия - член §MПан-синии коалиции§!"
+ TAI_DPP_not_ruling_tt: "Текущая правящая партия - член §CПан-синии коалиции§!\nТекущая правящая партия - член §RПан-синии коалиции§!"
  TAI_DPP_75_tt: "§YОбщая поддержка§! §GПан-зеленой коалиции§! больше §Y75%§!"
  TAI_DPP_25_tt: "§YОбщая поддержка§! §GПан-зеленой коалиции§! меньше §Y25%§!"
  accepted_roadmap: "§Y[TAI.GetNameWithflag]§! §Gпринял§! «дорожную карту воссоединения»"
@@ -805,3 +805,5 @@
  united_uar_for_coring_tt: "Мы §YПровозгласили Объединение арабов§!"
  CHI_unlock_african_countries_SCO_TT: "Если вы выполнили фокус §Y$CHI_Form_the_SCO$§!, этот фокус позволит большему количеству §YAфриканских стран§! присоединиться к §YSCO§!."
  CHI_SCO_Exploit_Economic_Clout_TT: "Этот §Yфокус§! увеличит §Y[CHI.GetFlag]влияние Китая§! во всех странах-членах §YSCO§!."
+ TAI_COM_ruling_tt: "Текущая правящая партия - член §RПан-синии коалиции§!"
+ TAI_KMT_ruling_tt: "Текущая правящая партия - член §CПан-синии коалиции§!"
