--- a/localisation/simp_chinese/MD_tooltips_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_tooltips_l_simp_chinese.yml
@@ -310,7 +310,7 @@
  TAI_loses_cores_tt: "§Y[TAI.Getnamewithflag]§!失去了中国大陆的核心\n"
  CHI_loses_cores_tt: "§Y[CHI.Getnamewithflag]§!失去了台湾地区的核心\n"
  TAI_DPP_ruling_tt: "当前执政党是§G泛绿联盟§!的成员"
- TAI_DPP_not_ruling_tt: "当前执政党是§C泛蓝联盟§!的成员"
+ TAI_DPP_not_ruling_tt: "当前执政党是§C泛蓝联盟§!的成员\n当前执政党是§R泛红联盟§!的成员"
  TAI_DPP_75_tt: "§G泛绿联盟§!的§Y总支持度§!超过§Y75%§!"
  TAI_DPP_25_tt: "§G泛绿联盟§!的§Y总支持度§!小于§Y25%§!"
  accepted_roadmap: "§Y[TAI.Getnamewithflag]§!已经§G接受§!“统一路线图”"
@@ -805,3 +805,5 @@
  united_uar_for_coring_tt: "我们已经§Y宣告阿拉伯统一§!"
  CHI_unlock_african_countries_SCO_TT: "如果你已完成§Y$CHI_Form_the_SCO$§!国策，该国策将会允许更多§Y非洲国家§!加入§Y上海合作组织§!。"
  CHI_SCO_Exploit_Economic_Clout_TT: "该§Y国策§!将在§Y上海合作组织§!成员国之间增加§Y[CHI.GetFlag]中国的影响力§!。"
+ TAI_COM_ruling_tt: "当前执政党是§R泛红联盟§!的成员"
+ TAI_KMT_ruling_tt: "当前执政党是§C泛蓝联盟§!的成员"
