--- a/localisation/english/MD_focus_CES_l_english.yml
+++ b/localisation/english/MD_focus_CES_l_english.yml
@@ -298,9 +298,9 @@
  CES_airbus_stuff: "Airbus Transport Planes"
  CES_airbus_stuff_desc: "We may establish contracts with Airbus to purchase transportation planes for our airforce logistical needs."
  CES_euro_helicopters: "European Helicopters"
- CES_euro_helicopters_desc: "Buying the newest European helicopters will greatly benefit our airforce."
+ CES_euro_helicopters_desc: "Buying the newest European helicopters will greatly benefit to our airforce."
  CES_czech_jets: "Czechoslovak Training Jets"
- CES_czech_jets_desc: "After the fall of Eastern bloc, may post-communist states sell out their retired equipemnt. We may need to buy them for our airforce."
+ CES_czech_jets_desc: "After the fall of Eastern bloc, may post-communist states sell out their retired equipment. We may need to buy them for our airforce."
  CES_tai_anka: "Turkish Drones"
  CES_tai_anka_desc: "Turkish drones have recommended themselves very greatly during recent conflicts. We may need to buy some of them."
  CES_bell_uh: "BELL-UH"
@@ -349,7 +349,7 @@
  CES_navy_frigates: "Frigates"
  CES_navy_frigates_desc: "A frigate is a type of warship. In different eras, the roles and capabilities of ships classified as frigates have varied somewhat. The name frigate in the 17th to early 18th centuries was given to any full-rigged ship built for speed and manoeuverability, intended to be used in scouting, escort and patrol roles."
  CES_navy_doctrine: "Doctrine Reform"
- CES_navy_doctrine_desc: "Our Naval doctrine is need of rennovation."
+ CES_navy_doctrine_desc: "Our Naval doctrine is need of renovation."
 
  CES_western_start: "The Democratic Way"
  CES_western_start_desc: "It is time for our country to embark on the path of democratic government"
@@ -405,8 +405,8 @@
  CES_liberals_modifier10_tt: "$CES_liberals_modifier_tt_intro$ \n £population_texticon  Monthly Population: §G+5.00%§! \n £stability_texticon  Stability: §G+2.00%§!\n £social_cost_multiplier_modifier_texticon §YSocial Spending Cost§! Multiplier: §R+5.00%§! \n \n"
  CES_liberals_modifier11_tt: "$CES_liberals_modifier_tt_intro$ \n£research_speed_texticon  Research Speed: §G+15.00%§! \n £stability_texticon  Stability: §G+8.00%§! \n\n"
  CES_liberals_modifier12_tt: "$CES_liberals_modifier_tt_intro$ \n£western_outlook_campaign_cost_modifier_texticon Daily Pro-Western Support: §G+0.04§! \n\n"
- CES_economical_affairs: "Economical Affairs"
- CES_economical_affairs_desc: "The early 2000s marked a transformative period for Central Asian countries as they navigated the complex landscape of economic development and transition."
+ CES_economic_affairs: "Economic Affairs"
+ CES_economic_affairs_desc: "The early 2000s marked a transformative period for Central Asian countries as they navigate the complex landscape of economic development and transition."
  CES_debt_reafctoring: "Debt Refactoring"
  CES_debt_reafctoring_desc: "Refactoring our debt will allow us some more freedom with our government spending."
  CES_exploit_natural_resources: "Exploit Natural Resources"
@@ -421,8 +421,8 @@
  CES_metal_extraction_desc: "Central Asia is a hub for the extraction of various metals, including copper, silver, and rare earth elements. The region's extensive mineral reserves have spurred a vibrant mining industry"
  CES_increase_privatisation: "Increase Privatisation"
  CES_increase_privatisation_desc: "We will benefit more from privatization, but it will weaken us from foreign influence."
- CES_enlargen_the_mines: "Enlargen The Mines"
- CES_enlargen_the_mines_desc: "Enlargening mines is needed to expand our mining industry."
+ CES_enlarge_the_mines: "Enlarge The Mines"
+ CES_enlarge_the_mines_desc: "Enlarging mines is needed to expand our mining industry."
  CES_natural_gas: "Natural Gas"
  CES_natural_gas_desc: "Gas extraction in Central Asia involves the drilling, processing, and transportation of natural gas to meet domestic and international energy demands. The region's gas resources have substantial economic importance, fostering both regional cooperation and global energy trade."
  CES_oil_extraction: "Oil Extraction"
@@ -434,7 +434,7 @@
  CES_invite_lukoil: "Invite Lukoil"
  CES_invite_lukoil_desc: "The PJSC Lukoil Oil Company is a Russian multinational energy corporation headquartered in Moscow, specializing in the business of extraction, production, transport, and sale of petroleum, natural gas, petroleum products, and electricity."
  CES_united_joint_venture: "United Joint Venture"
- CES_united_joint_venture_desc: "We shall merge the shares and benfit from it."
+ CES_united_joint_venture_desc: "We shall merge the shares and benefit from it."
 
  CES_trade_idea: "Trade Expansion"
  CES_supporting_what_has_left: "Supporting What Has Been Left"
@@ -447,10 +447,10 @@
  centrasiaev.1.t: "Asian Bank Support Negotiations"
  centrasiaev.1.d: "Asian Bank has accepted our proposal for support. Now we need to choose what we need to ask them for."
  centrasiaev.1.a: "Educational Support"
- centrasiaev.1.b: "Economical Support"
+ centrasiaev.1.b: "Economic Support"
  centrasiaev.1.c: "Social Support"
 
- CES_industry_focus_idea: "Economical Support From ADB"
+ CES_industry_focus_idea: "Economic Support From ADB"
  CES_education_focus_idea: "Educational Support From ADB"
  CES_social_focus_idea: "Social Support From ADB"
 
@@ -475,7 +475,7 @@
  CES_special_economic_zones: "Special Economic Zones"
  CES_special_economic_zones_desc: "Central Asia recognizes the necessity of establishing special economic zones (SEZs) to stimulate economic development. These zones offer incentives like tax breaks, reduced regulations, and streamlined administrative processes to attract domestic and foreign investments. In Central Asia, SEZs serve as catalysts for diversifying economies, fostering innovation, and creating jobs, particularly in sectors like manufacturing, technology, and trade. By promoting business-friendly environments, these zones play a pivotal role in the region's efforts to attract investments, enhance infrastructure, and drive economic growth."
 
- CES_infr_investment: "Infrastructural Investments"
+ CES_infr_investment: "Infrastructure Investments"
  CES_infr_investment_desc: "Central Asia is prioritizing infrastructural investments to modernize and expand its transportation, energy, and telecommunications networks. These investments are instrumental in connecting the region's diverse countries and facilitating trade and connectivity with neighboring nations."
 
  CES_industrial_revival: "Industrial Revival"
@@ -503,7 +503,7 @@
  CES_attract_tourists: "Attract Tourists"
  CES_attract_tourists_desc: "Attract Tourists"
  CES_special_gambling_regions: "Special gambling Regions"
- CES_special_gambling_regions_desc: "Pur minister of Economy proposed special gambling regions project to increase our economy."
+ CES_special_gambling_regions_desc: "Our minister of Economy proposed special gambling regions project to increase our economy."
 
  CES_russian_it_specialists: "Russian IT-shniks"
  CES_russian_it_specialists_desc: "Russian IT-shniks are seeking for new place to put their companies in. Our country is the perfect place for it!"
