--- a/localisation/english/MD_focus_BUL_l_english.yml
+++ b/localisation/english/MD_focus_BUL_l_english.yml
@@ -182,7 +182,7 @@
  BUL_foreign_expeditions: "Labour Unions"
  BUL_foreign_expeditions_desc: "Bulgarian labor unions advocate for workers' rights and better conditions, ensuring fair treatment and representation for employees across industries, contributing to a more equitable society."
  BUL_why_we_fight: "Our Stance"
- BUL_why_we_fight_desc: "To correctly build our foreign policy, we must understand our geopolitical posiition and act accordingly."
+ BUL_why_we_fight_desc: "To correctly build our foreign policy, we must understand our geopolitical position and act accordingly."
  BUL_political_commissars: "Political Commissars"
  BUL_political_commissars_desc: "Political Commissars will be essential in our glorious dream of a red Bulgaria."
  BUL_ignite_nostalgia: "Ignite the flames!"
@@ -194,7 +194,7 @@
  BUL_ally_to_russia: "Not so soviet, but brothers"
  BUL_ally_to_russia_desc: "Russia, after the fall of Soviet Union still fights against the influence of the west and thus we shall befriend them."
  BUL_macedonia_in_flames: "Macedonia in Flames!"
- BUL_macedonia_in_flames_desc: "Time has come to spread the flames of revolution to our brotehrs in Macedonia!"
+ BUL_macedonia_in_flames_desc: "Time has come to spread the flames of revolution to our brothers in Macedonia!"
  BUL_all_of_geo: "United Balkan Pact"
  BUL_our_irredenta: "Our Irredenta"
  BUL_our_irredenta_desc: "It has been reported that the Bulgarian new government is promoting Bulgarian irredentism, the belief that Bulgaria should expand its borders to include territories that were once under its control. This has sparked controversy and concern among neighboring countries."
@@ -571,7 +571,7 @@
  BUL_looking_to_germany: "German Model"
  BUL_looking_to_germany_desc: "German model of government is should be our mian example."
  BUL_like_angela_merkel: "Like Angela Merkel"
- BUL_like_angela_merkel_desc: "Angela Merkel is a prominent politicial in Germany, whom policies and practices we adore. We must follow her example."
+ BUL_like_angela_merkel_desc: "Angela Merkel is a prominent politician in Germany, whom policies and practices we adore. We must follow her example."
  BUL_corporativism_dem: "Christian Corporatism"
  BUL_corporativism_dem_desc: "Christian corporatism is a societal, economic, or a modern political application of the Christian doctrine of Paul of Tarsus in I Corinthians 1212-31 where Paul speaks of an organic form of politics and society where all people and components are functionally united, like the human body."
  BUL_respect_worker_rights: "Respecting Worker rights"
@@ -640,11 +640,11 @@
  BUL_Belarus_export_weapon_TT: "§YNow we will be able to buy weapons in Belarus .§!"
 
  BUL_demcrat_turks_compromis: "Compromise with Turkish Minority"
- BUL_demcrat_turks_compromis_desc: "We must try to find some agrement with turkish minority living in our country."
+ BUL_demcrat_turks_compromis_desc: "We must try to find some agreement with turkish minority living in our country."
  BUL_pirate_party: "Pirate Party of Bulgaria"
  BUL_pirate_party_desc: "The Pirate Party is a political party in Bulgaria. Their goal is to reform legislation in the field of intellectual property, patents, and copyright. They advocate for intellectual property reform, free and non-prosecution of non-commercial information, and privacy."
  BUL_freedom_for_all: "Freedom for all!"
- BUL_freedom_for_all_desc: "We need to ensure medie and copyright fredom for everybody and break the chains of cyber slavery!"
+ BUL_freedom_for_all_desc: "We need to ensure media and copyright freedom for everybody and break the chains of cyber slavery!"
  BUL_free_media: "Free Media!"
  BUL_free_media_desc: "Media shall be free from any censorship and should freed fully."
  BUL_minarchist_council: "Minarchism"
@@ -656,7 +656,7 @@
  BUL_crusade_on_propaganda: "Crusade against UN Propaganda"
  BUL_crusade_on_propaganda_desc: "UN is a fake organization made to control us! We must resist it at all costs!"
  BUL_support_from_us_party: "Support from U.S."
- BUL_support_from_us_party_desc: "Our ideological brothers from U.S. might be really inetrested in providing help for us."
+ BUL_support_from_us_party_desc: "Our ideological brothers from U.S. might be really interested in providing help for us."
  BUL_lib_coal: "§GWe will invite Green Party to Coalition!§!"
  BUL_gre_all_TT: "§GWe will invite Libertarians and Socialists to our Coalition!§!"
  BUL_revit_TT: "§GRevitalizing Arsenal Arms Company will take money, but will make it available as a Research Company!§!"
@@ -667,27 +667,27 @@
  BUL_investing_in_eco_projects: "Green Investments"
  BUL_investing_in_eco_projects_desc: "Green investments involve allocating financial resources into environmentally sustainable projects, businesses, and technologies aimed at mitigating climate change and promoting ecological preservation."
  BUL_countering_ecological_reactionism: "Countering Anti-Green Reaction"
- BUL_countering_ecological_reactionism_desc: "All those who will oppose our new agenda must be silenced and punished accrodingly!"
+ BUL_countering_ecological_reactionism_desc: "All those who will oppose our new agenda must be silenced and punished accordingly!"
  BUL_green_energy: "Renewable Energy"
  BUL_green_energy_desc: "Renewable energy refers to sustainable sources of power generated from natural resources such as sunlight, wind, water, and geothermal heat, which can be replenished indefinitely and produce minimal environmental impact."
  BUL_glxin_bampem_zavodneri: "New Standards"
- BUL_glxin_bampem_zavodneri_desc: "We must establish new standards of industrial producing to make it fit our green agenda."
+ BUL_glxin_bampem_zavodneri_desc: "We must establish new standards of industrial production to make it fit our green agenda."
  BUL_freash_bulgarian_air: "Bulgarian Fresh Air"
  BUL_freash_bulgarian_air_desc: "Fresh air is vital for Bulgarian people because it embodies the essence of freedom, health, and connection to their pristine natural landscapes, deeply ingrained in their cultural identity and cherished as a sanctuary from the pressures of modern life."
  BUL_bulgarian_wine: "Investing in Bulgarian Wine"
  BUL_bulgarian_wine_desc: "Is there anybody who doesn't like wine? We don;t think so! May Dionysius's blessing be upon us all!"
  BUL_green_bulgaria: "New, Green Bulgaria"
- BUL_green_bulgaria_desc: "Now Bulgaria is a new, greener state which now has revolutionized It's identity!"
+ BUL_green_bulgaria_desc: "Now Bulgaria is a new, greener state which now has revolutionized its identity!"
  BUL_revitalizing_militar_industry: "Revitalize ARSENAL Arms"
- BUL_revitalizing_militar_industry_desc: "ARSENAL Arms must be renwed and reformed to finally meet the needs of the market!"
+ BUL_revitalizing_militar_industry_desc: "ARSENAL Arms must be renewed and reformed to finally meet the needs of the market!"
  BUL_contract_with_Kalashnikov: "Contract with Izhmash"
  BUL_contract_with_Kalashnikov_desc: "Contract with Izhmash must be established to get more support in weapon producing."
  BUL_new_licenses_ak: "New Licenses"
- BUL_new_licenses_ak_desc: "Newer versions of small are being produced all around the world. We must acquire new licenses and prodcue them!"
+ BUL_new_licenses_ak_desc: "Newer versions of small are being produced all around the world. We must acquire new licenses and produce them!"
  BUL_airburst_stuff: "Increase the production of small arms"
  BUL_airburst_stuff_desc: "To meet the market's needs, we must produce more guns to be able to export them."
  BUL_airburst_stufff: "Develop the production of command equipment"
- BUL_airburst_stufff_desc: "Arsenal comany has a big variety of products in it's list. We must expand it further and produce command equipment."
+ BUL_airburst_stufff_desc: "Arsenal company has a big variety of products in it's list. We must expand it further and produce command equipment."
  BUL_zenith_ka: "AA Guns"
  BUL_zenith_ka_desc: "AA guns, short for anti-aircraft guns, are artillery weapons specifically designed to intercept and destroy enemy aircraft, providing crucial defense against aerial threats during military conflicts."
  BUL_zenith_kaa: "AT Guns"
@@ -695,13 +695,13 @@
  BUL_karanatay_vvoz: "Bulgarian Trucks"
  BUL_karanatay_vvoz_desc: "Bulgarian trucks are robust and versatile vehicles, renowned for their reliability and durability, adept at navigating challenging terrain and transporting goods efficiently across the country's diverse landscapes."
  BUL_expanding_arsenal: "Expanding Arsenal"
- BUL_expanding_arsenal_desc: "Now, we can start a new full expansion of our productiona and export."
+ BUL_expanding_arsenal_desc: "Now, we can start a new full expansion of our production and export."
  BUL_NATO_cooperation: "NATO Cooperation"
  BUL_NATO_cooperation_desc: "We can cooperate with NATO on our army doctrine. This cooperation will be quite beneficial for us."
  BUL_chi_industry: "Arsenal Expansion"
  BUL_chi_industry2: "Arsenal Expansion"
  BUL_eu_ask_invest: "German Investments"
- BUL_eu_ask_invest_desc: "Maybe we should try to aks Germans for Investments. It may benefit us both."
+ BUL_eu_ask_invest_desc: "Maybe we should try to ask Germans for Investments. It may benefit us both."
  BUL_unsatisf_rurk_minority: "Unsatisfied Turkish Minority"
 
  bulg.13.t: "Bulgarian Industry"
@@ -781,8 +781,8 @@
  BUL_sports_develop1: "Sport Development"
  BUL_sports_develop2: "Sport Popularization"
  BUL_idea_agrarian_reform: "Agrarian Reform"
- BUL_decommdify_the_basics_idea: "Decommdify the Basics"
- BUL_decommdify_the_basics_idea_desc: "The basics should not be considered a commodity. It is a basic and should be treated as such."
+ BUL_decommodify_the_basics_idea: "Decommodify the Basics"
+ BUL_decommodify_the_basics_idea_desc: "The basics should not be considered a commodity. It is a basic and should be treated as such."
  BUL_black_market_controlled: "Black Market Controlled"
  BUL_idea_rainforest_protectors: "Forest Protectors"
  BUL_new_farms_market: "New Market for Farms"
