--- a/localisation/english/MD_focus_GEO_l_english.yml
+++ b/localisation/english/MD_focus_GEO_l_english.yml
@@ -1006,7 +1006,7 @@
  GEO_patrol_cather: "Georgian Coastal Guard"
 
  geo_misc.3.t: "Georgia proposes non-aggression pact"
- geo_misc.3.d: "Georgia wants to achieve strong peace in the region by not having a pact signed by both of our countries."
+ geo_misc.3.d: "Georgia wants to achieve strong peace in the region by having a pact signed by both of our countries."
  geo_misc.3.a: "Good idea!"
  geo_misc.3.b: "Never"
 
@@ -1015,7 +1015,7 @@
  geo_misc.4.a: "Sad"
 
  geo_misc.5.t: "Georgia proposes non-aggression pact"
- geo_misc.5.d: "Georgia wants to achieve strong peace in the region by not having a pact signed by both of our countries."
+ geo_misc.5.d: "Georgia wants to achieve strong peace in the region by having a pact signed by both of our countries."
  geo_misc.5.a: "Good idea!"
  geo_misc.5.b: "Never"
  geo_misc.5.c: "Never"
