--- a/localisation/english/MD_focus_HOL_l_english.yml
+++ b/localisation/english/MD_focus_HOL_l_english.yml
@@ -63,7 +63,14 @@
  HOL_Submarine_Modernization_Idea_desc: "Submarine modernization is a key initiative for the Royal Netherlands Navy, focusing on upgrading the aging Walrus-class submarines. These upgrades include advanced sonar systems, improved stealth features, and enhanced weaponry, ensuring the submarines remain effective in modern naval operations. The modernization aims to extend the service life of the submarines and maintain their strategic relevance in global maritime security efforts."
  HOL_CMP_idea: "Commissariaat Militaire Productie"
  HOL_CMP_idea_desc: "The Commissariaat Militaire Productie (CMP), or Commissariat for Military Production, was a Dutch government body established to oversee and coordinate the production of military equipment and supplies. Its primary role was to ensure that the Netherlands' defense forces were adequately equipped, especially during times of conflict or heightened military preparedness. The CMP was responsible for managing contracts with domestic industries, regulating the production of weapons, ammunition, vehicles, and other military necessities, and ensuring that these were produced to meet the required standards and timelines."
-
+ HOL_Army2: "Koninklijke Landmacht"
+ HOL_Army2_desc: "The Koninklijke Landmacht, or Royal Netherlands Army, is the land-based branch of the Dutch Armed Forces, with roots dating back to the 16th century. It is responsible for the defense of Dutch territory and contributes to international missions, including NATO and UN peacekeeping operations. The army is equipped with modern vehicles, artillery, and communication systems. The Royal Netherlands Army is a versatile force, ready to address a range of security challenges both at home and abroad."
+ HOL_Defensienota_idea: "Defensienota 2022"
+ HOL_Defensienota_idea_desc: "he Defensienota 2022 is a strategic policy document outlining the future direction and priorities of the Dutch Ministry of Defense. It addresses the changing global security environment, emphasizing the need for a stronger and more adaptable defense force. Key themes include increased defense spending, modernization of military capabilities, and enhanced international cooperation, particularly within NATO and the European Union. The document highlights investments in cyber defense, intelligence, and advanced technology, as well as the expansion of personnel and readiness levels. The Defensienota 2022 aims to ensure that the Dutch Armed Forces are prepared to address current and emerging threats, contributing to both national security and global stability."
+ HOL_Marechausee1: "Koninklijke Marechaussee"
+ HOL_Marechausee1_desc: "The Koninklijke Marechaussee, or Royal Netherlands Marechaussee, is a gendarmerie force that operates under the Dutch Ministry of Defense. It is responsible for a wide range of security and law enforcement tasks, both within the Netherlands and internationally. Key duties include border security, military policing, and protecting the royal family and government officials. The Marechaussee also plays a crucial role in combating organized crime, human trafficking, and terrorism, and is involved in international peacekeeping missions. Known for its versatility and specialized capabilities, the Koninklijke Marechaussee is a vital component of the Netherlands' national security infrastructure."
+ HOL_Air1: "Koninklijke Luchtmacht"
+ HOL_Air1_desc: "The Koninklijke Luchtmacht, or Royal Netherlands Air Force, is the aerial branch of the Dutch Armed Forces, tasked with defending Dutch airspace and supporting national and international military operations. Established in 1953, the Air Force operates a modern fleet that includes fighter jets, transport aircraft, helicopters, and unmanned aerial vehicles (UAVs). It plays a crucial role in NATO missions, air policing, and rapid deployment capabilities. The Koninklijke Luchtmacht is also involved in humanitarian aid, disaster response, and contributes to the security of Dutch overseas territories. With its advanced technology and highly trained personnel, the Royal Netherlands Air Force is a key component of the country's defense strategy."
  ### Modifiers
  HOL_Groningen_Herstelt1: "Herstel Groningen"
  HOL_Groningen_Herstelt1_desc: "Herstel Groningen refers to the comprehensive efforts aimed at addressing the damage and revitalizing the region of Groningen, which has been significantly impacted by gas extraction activities. The initiative focuses on repairing and reinforcing homes and infrastructure that have suffered from earthquakes caused by decades of natural gas extraction from the Groningen gas field. Beyond physical restoration, Herstel Groningen also includes economic revitalization projects to support the local economy and improve quality of life for residents. The program is a collaborative effort involving the Dutch government, local authorities, and various stakeholders, aiming to ensure the long-term safety, sustainability, and prosperity of the Groningen region."
@@ -91,7 +98,28 @@
  HOL_Positioning: "£ships_contact_texticon  Positioning"
  HOL_Positioning_change_tt: "£ships_contact_texticon  Positioning: [?HOL_Positioning_change|%+] \n "
  HOL_navy_intel_to_others: "£navy_intel_texticon  Navy intelligence to others"
- HOL_navy_intel_to_others_change_tt: "£navy_intel_texticon  Navy intelligence to others: [?HOL_navy_intel_to_others_change|%+] \n "
+ HOL_navy_intel_to_others_change_tt: "£navy_intel_texticon  Navy- intelligence to others: [?HOL_navy_intel_to_others_change|%+] \n "
  HOL_production_speed_radar_station_factor: "£construction_speed_texticon §Y$radar_station$§! construction speed"
  HOL_production_speed_radar_station_factor_change_tt: "£construction_speed_texticon §Y$radar_station$§! construction speed: [?HOL_production_speed_radar_station_factor_change|%+] \n "
-
+ HOL_Noordzee_Parken: "Noordzee Energiepark"
+ HOL_army_org_factor: "£organization_texticon  Division Organization"
+ HOL_army_org_factor_tt: "£organization_texticon  Division Organization: [?HOL_army_org_factor_change|%+] \n "
+ HOL_army_speed_factor: "£attacker_speed_texticon  Divisions speed"
+ HOL_army_speed_factor_tt: "£attacker_speed_texticon  Divisions speed: [?HOL_army_speed_factor_change|%+] \n "
+ HOL_recon_factor: "£recon_texticon  Reconnaissance"
+ HOL_recon_factor_tt: "£recon_texticon  Reconnaissance: [?HOL_recon_factor_change|%+] \n "
+ HOL_initiative_factor: "£initiative_texticon  Initiative"
+ HOL_initiative_factor_tt: "£initiative_texticon  Initiative: [?HOL_initiative_factor_change|%+] \n "
+ HOL_air_detection: "£air_detection_texticon  Air Detection"
+ HOL_air_detection_tt: "£air_detection_texticon  Air Detection: [?HOL_air_detection_change|%+] \n "
+ HOL_enemy_army_bonus_air_superiority_factor: "£enemy_air_superiority_texticon  Enemy Air Support"
+ HOL_enemy_army_bonus_air_superiority_factor_tt: "£enemy_air_superiority_texticon  Enemy Air Support: [?HOL_enemy_army_bonus_air_superiority_factor_change%+] \n "
+ HOL_army_artillery_attack_factor: "£attack_artillery_texticon  Artillery Attack"
+ HOL_army_artillery_attack_factor_tt: "£attack_artillery_texticon  Artillery Attack: [?HOL_army_artillery_attack_factor_change|%+] \n "
+ HOL_army_artillery_defence_factor: "£defence_artillery_texticon  Artillery Defense"
+ HOL_army_artillery_defence_factor_tt: "£defence_artillery_texticon  Artillery Defense: [?HOL_army_artillery_defence_factor_change|%+] \n "
+ HOL_supply_consumption_factor: "£supply_consumption_texticon  Supply Consumption"
+ HOL_supply_consumption_factor_tt: "£supply_consumption_texticon  Supply Consumption: [?HOL_supply_consumption_factor_change|%+] \n "
+ HOL_land_reinforce_rate: "£reinforce_texticon  Reinforce Rate"
+ HOL_land_reinforce_rate_tt: "£reinforce_texticon  Reinforce Rate: [?HOL_land_reinforce_rate_change|%+] \n "
+ HOL_Change_Army_Spirit_TT: "Modify §HKoninklijke Landmacht§! by \n"
