Large number of assorted fixes and new UI tools and comments

--- a/localisation/english/MD_decisions_l_english.yml
+++ b/localisation/english/MD_decisions_l_english.yml
@@ -1135,3 +1135,10 @@
  SUD_war_in_darfur_arm_janjaweed: "Arm The Janjaweed"
  SUD_war_in_darfur_arm_janjaweed_desc: "The Janjaweed are an Arab militia operating in Darfur. Originally created by Chad, the Janjaweed act as strongmen for Darfur's Arab population, making sure the land stays in their hands. We have long used the Janjaweed to control the Darfur insurgency, but with our forces being outnumbered, perhaps it is time to increase our support for them."
  SUD_war_in_darfur_arm_janjaweed_tt: "Three brigades of §YJanjaweed militia§! will be created"
+
+ ai_templates_category: "AI Templates Category"
+ ai_templates_category_desc: "This is just a decision category for helping the AI convert over units."
+ convert_militia_to_light_inf: "Convert Milita to Light Infantry"
+ convert_l_inf_to_mot_inf: "Convert Light Infantry to Motorized Infantry"
+ convert_mot_to_mech_inf: "Convert Motorized to Mechanized Infantry"
+ UKR_convert_stuff: "Ukraine Convert Templates"
