--- a/localisation/english/MD_internal_factions_l_english.yml
+++ b/localisation/english/MD_internal_factions_l_english.yml
@@ -475,6 +475,10 @@
  has_defense_industry_tt: "Has Internal Faction §Y$defense_industry$§!"
  has_economic_faction_TT: "Economic internal faction"
  has_religious_faction_TT: "Religious internal faction"
+ the_ulema_minus_5_tt: "§Y$the_ulema$§! Opinion §R-5§!\n"
+ the_clergy_minus_5_tt: "§Y$the_clergy$§! Opinion §R-5§!\n"
+ wahabi_ulema_minus_5_tt: "§Y$wahabi_ulema$§! Opinion §R-5§!\n"
+ the_priesthood_minus_5_tt: "§Y$the_priesthood$§! Opinion §R-5§!\n"
  the_military_minus_5_tt: "§YThe Military§! Opinion §R-5§!\n"
  the_military_add_5_tt: "§YThe Military§! Opinion §G+5§!\n"
  the_military_add_10_tt: "§YThe Military§! Opinion §G+10§!\n"
@@ -510,6 +514,10 @@
  encourage_additional_resource_production_decision_desc: "Encouraging additional production from our resource sector can help us move closer to resource independence. We can do this by giving a bit of a tax reduction in the short term."
  cut_taxes_on_the_rich_decision: "Cut Taxes on the Rich"
  cut_taxes_on_the_rich_decision_desc: "It is time to cut the taxes on the rich to help spur some growth in the economy."
+ impose_taxes_on_religious_institutions_decision: "Impose Taxes on Religious Institutions"
+ impose_taxes_on_religious_institutions_decision_desc: "Religious institutions within our country are currently above the law in the eyes of our tax office. We should impose new regulations about taxing these entities to bring additional funds into the government treasury."
+ repeal_taxes_on_religious_institutions_decision: "Repeal Taxes on Religious Institutions"
+ repeal_taxes_on_religious_institutions_decision_desc: "The recent taxes we have imposed on religious institutions has yielded far more negative consequences then it otherwise would've gained. We should probably explore repealing those laws."
 
  # Idea Section
  internal_faction_labour_dispute_companies_favoured: "Labour Dispute - Corporations Favoured"
@@ -524,12 +532,15 @@
  internal_faction_subsidize_convoy_production_desc: "We have subsidized convoy freighter production at the behest of drydocks who needed the additional cash flow."
  internal_faction_decreased_investments: "Decreased Investments"
  internal_faction_decreased_investments_desc: "Due to our economic decisions, investments made by companies are slowing down"
- internal_factions_allowed_foreign_nationals_military: "Allowed Foreign Nationals in the Military"
+ internal_factions_allowed_foreign_nationals_military: "Service Guarantees Citizenship"
  internal_factions_allowed_foreign_nationals_military_desc: "Recently we have passed laws and legislation to allow foreign nationals into the military without requiring citizenship. It has become a method for the military to recruit new soldiers but it has caused some instability within the ranks."
  internal_factions_temporarily_reduce_migrations: "Temporarily Reduced Migration Targets"
  internal_factions_temporarily_reduce_migrations_desc: "Due to pressure from specific foreign interest groups in the country we have reduced our migration targets."
  internal_factions_religious_people_in_education: "Religious People in Education"
  internal_factions_religious_people_in_education_desc: "We have allowed religious leaders into places on our education boards. It has allowed us to cut some costs but it has caused some progressive elements within the country to be upset with the current government."
+ internal_factions_taxing_religious_institutions: "Taxing Religous Institutions"
+ internal_factions_taxing_religious_institutions_desc: "The government has started to impose taxation on religious institutions within the country. It is helping the budget shortfall of the government but at the cost of the disapproval of the religious factions within our country."
+ internal_factions_taxing_religious_institutions_tt: "Additional Income from §YTaxing Religious Institutions§!: $$[?additional_income_taxing_religious_institutions|G3]"
 
  # Events
  internal_factions_events.0.t: "Business Owner's Request a Tax Cut"
