Author and Changelog

--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -153,7 +153,8 @@ Arsdor
 BiometricNuke
 Karl (Discord: @mr.maul) (Gitlab: @KarlEssig)
 HKKNNT
-Cyrus
+Cyrus (Discord: @cyrusjackson)
+Old.Bird (Discord: @old.bird)
 
 Fellow Modders/Teams:
 swf
