--- a/localisation/english/MD_focus_MLW_l_english.yml
+++ b/localisation/english/MD_focus_MLW_l_english.yml
@@ -23,6 +23,11 @@
  MLW_SAF_DM_expenses_TT: "Additional Expenses: $[?MLW_SAF_additional_expense|-3]\n"
 
  # EVENTS
+ # MSCC
+ MLW_MSCC.1.t: "[FROM.GetName] Hires MSCC Team"
+ MLW_MSCC.1.d: "" # fix
+ MLW_MSCC.1.O1: "Enjoy the working holiday!"
+
  # SOUTH AFRICAN FOPOL
  MLW_FOPOL_SAF.1.t1: "Malawian Armed Forces Seek Security Co-operation"
  MLW_FOPOL_SAF.1.d1: ""
@@ -252,10 +257,15 @@
  MLW_FOPOL_GCC.400.d: "" # fix
  MLW_FOPOL_GCC.400.O1: "We look forwards to working together."
 
+ MLW_FOPOL_GCC.5.t: "Opting Out of Malawian Pestering"
+ MLW_FOPOL_GCC.5.d: "You've chosen to opt out of the Malawian auction pestering as well as the MSCC team hiring. They won't pester you anymore about these events, you will still receive events relating to regular relations with Malawi."
+ MLW_FOPOL_GCC.5.Y1: "I only care about oil."
+ MLW_FOPOL_GCC.5.N1: "MISINPUT! MISINPUT!"
+
  # DECISIONS
  # GCC FOPOL
- MLW_FOPOL_GCC_decisions_category: "Malawian-Gulf Relations"
- MLW_FOPOL_GCC_decisions_category_desc: "In recent years, §Y[MLW.GetNameWithFlag]§! has become a vital hub for cultural, religious and economic trade with the Gulf nations.\n\nThe Southern African nation is shaping up to become an ample location for petrochemical sales including the desperately needed fertiliser sales that will feed the exploding population of the country. In return it is expected that the Malawian populous will become another source of cheap labour for the ever increasing Gulf nations' megaprojects."
+ MLW_FOPOL_GCC_MLW_decisions_category: "Malawian-Gulf Relations"
+ MLW_FOPOL_GCC_MLW_decisions_category_desc: "In recent years, §Y[MLW.GetNameWithFlag]§! has become a vital hub for cultural, religious and economic trade with the Gulf nations.\n\nThe Southern African nation is shaping up to become an ample location for petrochemical sales including the desperately needed fertiliser sales that will feed the exploding population of the country. In return it is expected that the Malawian populous will become another source of cheap labour for the ever increasing Gulf nations' megaprojects."
  MLW_GCC_land_rights_checker_TT: "[MLW_GCC_BHR_leaseholder_checker][MLW_GCC_EGY_leaseholder_checker][MLW_GCC_IRQ_leaseholder_checker][MLW_GCC_JOR_leaseholder_checker][MLW_GCC_KUW_leaseholder_checker][MLW_GCC_MOR_leaseholder_checker][MLW_GCC_OMA_leaseholder_checker][MLW_GCC_QAT_leaseholder_checker][MLW_GCC_SAU_leaseholder_checker][MLW_GCC_UAE_leaseholder_checker][MLW_GCC_YEM_leaseholder_checker]"
 
  MLW_FOPOL_GCC_CAT_window_LEASEHOLDER_TITLE_TEXT: "Current §YLeaseholder§!:"
@@ -265,6 +275,21 @@
  MLW_FOPOL_GCC_CAT_window_BIDDERS_LOCKED_TITLE_TEXT: "To unlock the §YLand Rights Auction§! you must first complete the §Y$MLW_gcc_mining_rights$§! focus."
  MLW_FOPOL_GCC_CAT_window_MSCC_TITLE_TEXT: "Current §YMSCC-Gulf§! Clients:"
  MLW_FOPOL_GCC_CAT_window_MSCC_LOCKED_TITLE_TEXT: "To unlock the §YMSCC Clients List§! you must first complete the §Y$MLW_gcc_megaprojects$§! focus."
+
+
+
+
+
+ MLW_FOPOL_GCC_GCC_decisions_category: "$MLW_FOPOL_GCC_MLW_decisions_category$"
+ MLW_FOPOL_GCC_GCC_decisions_category_desc: "$MLW_FOPOL_GCC_MLW_decisions_category_desc$"
+
+
+
+
+ MLW_FOPOL_GCC_opt_out_of_viewing: "Opt Out of Malawian GCC Mechanics"
+ MLW_FOPOL_GCC_opt_out_of_viewing_TT: "Clicking this will opt you out of the §Y$MLW_FOPOL_GCC_MLW_decisions_category$§! mechanics, you will be prompted to confirm this decision."
+ MLW_FOPOL_GCC_opt_out_of_viewing_CONFIRM_TT: "Malawi will be without your money for the rest of game."
+ MLW_FOPOL_GCC_opt_out_of_viewing_DENY_TT: "Too many damn things to click, but Malawi is worth the click <3"
 
  # SADC FOPOL
 
@@ -617,9 +642,9 @@
 
 
  # COST TOOLTIPS
- MLW_workers_GCC_COST: "£treasury [?MLW_GCC_worker_cost|3]"
- MLW_workers_GCC_COST_blocked: "£treasury [?MLW_GCC_worker_cost|R3]"
- MLW_workers_GCC_COST_tooltip: "The hiring of [MLW.GetFlag] [MLW.GetAdjective] workers will cost approximately $$[?MLW_GCC_worker_cost|Y3] §Hbillion§!"
+ MLW_workers_GCC_COST: "£treasury [MLW_MSCC_cost_decision_display]"
+ MLW_workers_GCC_COST_blocked: "£treasury [MLW_MSCC_cost_decision_display]"
+ MLW_workers_GCC_COST_tooltip: "The hiring of [MLW.GetFlag] [MLW.GetAdjective] workers will cost approximately $$[MLW_MSCC_cost_tooltip_display] §Hbillion§!"
 
 
  # FOCUS TOOLTIPS
