--- a/localisation/english/MD_internal_factions_l_english.yml
+++ b/localisation/english/MD_internal_factions_l_english.yml
@@ -538,7 +538,7 @@
  internal_factions_temporarily_reduce_migrations_desc: "Due to pressure from specific foreign interest groups in the country we have reduced our migration targets."
  internal_factions_religious_people_in_education: "Religious People in Education"
  internal_factions_religious_people_in_education_desc: "We have allowed religious leaders into places on our education boards. It has allowed us to cut some costs but it has caused some progressive elements within the country to be upset with the current government."
- internal_factions_taxing_religious_institutions: "Taxing Religous Institutions"
+ internal_factions_taxing_religious_institutions: "Taxing Religious Institutions"
  internal_factions_taxing_religious_institutions_desc: "The government has started to impose taxation on religious institutions within the country. It is helping the budget shortfall of the government but at the cost of the disapproval of the religious factions within our country."
  internal_factions_taxing_religious_institutions_tt: "Additional Income from §YTaxing Religious Institutions§!: $$[?additional_income_taxing_religious_institutions|G3]"
 
