--- a/localisation/english/MD_money_l_english.yml
+++ b/localisation/english/MD_money_l_english.yml
@@ -347,7 +347,7 @@
  LBA_oil_nationalisation_additional_income_tt: "$$[?libya_oil_nationalisation_additional_income|+3] from §YOil Nationalisation§!\n"
  additional_income_overlord_subsidies_tt: "$$[?additional_income_overlord_subsidies|+3] from §YOverlord Subsidies§!"
  additional_income_overlord_total_subsidies_tt: "$$[?overlord_subsidies_total_cost|-3] from §YOverlord Subsidies§!"
- additional_income_taxing_religious_institutions_tt: "$$[?additional_income_taxing_religious_institutions|+3] from §YTaxing Religous Institutions§!"
+ additional_income_taxing_religious_institutions_tt: "$$[?additional_income_taxing_religious_institutions|+3] from §YTaxing Religious Institutions§!"
  open_contract_money_screen: "Open Contract Costs Screen"
  open_contract_money_screen_desc: "Opens the money cost screen for the international market."
 
