--- a/localisation/english/MD_focus_RAJ_l_english.yml
+++ b/localisation/english/MD_focus_RAJ_l_english.yml
@@ -1101,7 +1101,7 @@
  RAJ_full_india_programme: "Full India Programme"
  RAJ_full_india_programme_desc: "Although it will be hard to acomplish, all of India should be connected to this programme."
  RAJ_only_ujjwala: "Only one Region"
- RAJ_only_ujjwala_desc: "Ony the poorest regions should have this privilege to balance the social situation in the country."
+ RAJ_only_ujjwala_desc: "Only the poorest regions should have this privilege to balance the social situation in the country."
  RAJ_prior_hindus: "Prioritize Hindus"
  RAJ_prior_hindus_desc: "Hindus are the core of the Indian State. We should give them priority in every possible way."
  RAJ_coal_with_right_wing: "Coalition with Military"
